fix dropbtn :focus border (force internal to not overlap neighbours)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -643,6 +643,7 @@ td h5 {
 .nav a:focus, 
 .nav .dropbtn:focus {
   outline: dotted;
+  outline-offset: -0.5rem;
   background-color: var(--overlay);
   color: var(--text);
 }
